--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ input[type="text"] {
 }
 button {
   padding: 8px 12px;
-  background-color: #b71c1c;
+  background-color: #550000;
   color: white;
   border: none;
   border-radius: 4px;
