--- a/style.css
+++ b/style.css
@@ -54,9 +54,13 @@ button {
   text-align: center;
   margin: 10px 0;
 }
-.donations .disclaimer {
+.donations {
   margin-top: 20px;
   font-size: 0.9em;
   text-align: center;
   color: #666;
+  }
+  .disclaimer {
+  margin-top: 20px;
+  font-size: 0.9em;
 }
