--- a/style.css
+++ b/style.css
@@ -50,6 +50,13 @@ button {
   border-radius: 4px;
   cursor: pointer;
 }
+  /* el hover es al seleccionar */
+ button input:hover {
+  font-weight: bold;
+  background-color: #800000;
+  border: solid 1px black;
+}
+   
 .language-selector {
   text-align: center;
   margin: 10px 0;
